[DM-21120] Fix MOTD box
The MOTD box would cut off messages and not have scroll bars.  This
makes it so that it will automatically add scroll bars if the text
would overflow, without overflowing the box onto the rest of the
page.  Also, make the box a larger, more reasonable size.

--- a/public_html/static/lsst_lsp.css
+++ b/public_html/static/lsst_lsp.css
@@ -41,10 +41,10 @@ footer {
 }
 
 .motd {
-      height:100px;
-      min-height:100px;
-      max-height:100px;
-      overflow: hidden;
+      height:400px;
+      min-height:400px;
+      max-height:400px;
+      overflow: auto;
       color: black;
 }
 .carousel {
